k8s/staging/back-office/service.yml
apiVersion: v1
kind: Service
metadata:
  name: soncollab-back-office-service
  namespace: soncollab-staging
  labels:
    app: soncollab-back-office
    environment: staging
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: soncollab-back-office
    environment: staging
